#2966 Icons are added to app_icon/ directory by the installer. #3178 File associations under Windows are created (optionally) by the installer. #3265 More polishing for installer assembly script.

--- a/SQLiteStudio3/sqlitestudio/package.xml
+++ b/SQLiteStudio3/sqlitestudio/package.xml
@@ -10,4 +10,8 @@
     </Licenses>
     <Default>true</Default>
     <ForcedInstallation>true</ForcedInstallation>
+	<Script>installscript.qs</Script>
+    <UserInterfaces>
+        <UserInterface>register_file_types.ui</UserInterface>
+    </UserInterfaces>
 </Package>
