--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: cpp
 compiler: gcc
 
 before_install:
- - sudo add-apt-repository ppa:beineri/opt-qt-5.10.1-trusty
+ - sudo add-apt-repository -y ppa:beineri/opt-qt-5.10.1-trusty
  - sudo apt-get update -qq
  - sudo apt-get install -qq qt510base qt510imageformats qt510script qt510svg qt510tools 
 
