--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,27 @@ before_install:
  - sudo add-apt-repository -y ppa:beineri/opt-qt-5.10.1-trusty
  - sudo apt-get update -qq
  - sudo apt-get install -qq qt510base qt510imageformats qt510script qt510svg qt510tools 
+ - sudo apt-get install -qq tcl
+ - mkdir deps
+ - cd deps
+ - wget http://sqlitestudio.pl/files/depends/sqlite-2.8.17.tar.gz
+ - tar xzf sqlite-2.8.17.tar.gz
+ - cd sqlite-2.8.17
+ - ./configure
+ - make
+ - sudo make install
+ - cd ..
+ - wget http://sqlite.org/2018/sqlite-autoconf-3230100.tar.gz
+ - tar xzf sqlite-autoconf-3230100.tar.gz
+ - cd sqlite-autoconf-3230100
+ - ./configure
+ - make
+ - sudo make install
+ - cd ..
+ - sudo apt-get install -qq libtcl8.6 tcl8.6-dev
 
 before_script:
-  - mkdir ../output/build/Plugins
+  - mkdir -p ../output/build/Plugins
   - cd ../output/build
   - . /opt/qt510/bin/qt510-env.sh && qmake ../../SQLiteStudio3
   - cd Plugins
