--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ before_install:
  - sudo add-apt-repository -y ppa:beineri/opt-qt-5.10.1-trusty
  - sudo apt-get update -qq
  - sudo apt-get install -qq qt510base qt510imageformats qt510script qt510svg qt510tools 
- - sudo apt-get install -qq tcl
  - mkdir deps
  - cd deps
  - wget http://sqlitestudio.pl/files/depends/sqlite-2.8.17.tar.gz
@@ -27,10 +26,17 @@ before_install:
 
 before_script:
   - mkdir -p ../output/build/Plugins
-  - cd ../output/build
-  - . /opt/qt510/bin/qt510-env.sh && qmake ../../SQLiteStudio3
-  - cd Plugins
-  - . /opt/qt510/bin/qt510-env.sh && qmake ../../../Plugins
-  - cd ..
+  - . /opt/qt510/bin/qt510-env.sh
+  - qmake --version
   
-script: make && cd Plugins && make
+script: [
+  "cd ../output/build",
+  "qmake DEFINES+=tests ../../SQLiteStudio3",
+  "make -j 2"
+  "cd ../Plugins"
+  "qmake ../../../Plugins",
+  "make -j 2",
+  "cd ../../SQLiteStudio",
+  "ls -l"
+  "for f in tst_*; do ./$f; done"
+]
