--- a/.travis.yml
+++ b/.travis.yml
@@ -29,14 +29,14 @@ before_script:
   - . /opt/qt510/bin/qt510-env.sh
   - qmake --version
   
-script: [
-  "cd ../output/build",
-  "qmake DEFINES+=tests ../../SQLiteStudio3",
-  "make -j 2"
-  "cd ../Plugins"
-  "qmake ../../../Plugins",
-  "make -j 2",
-  "cd ../../SQLiteStudio",
-  "ls -l"
-  "for f in tst_*; do ./$f; done"
-]
+script:
+  cd ../output/build
+  qmake DEFINES+=tests ../../SQLiteStudio3
+  make -j 2
+  cd ../Plugins
+  qmake ../../../Plugins
+  make -j 2
+  cd ../../SQLiteStudio
+  ls -l
+  for f in tst_*; do ./$f; done
+
