--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: cpp
 compiler: gcc
 
 before_install:
+ - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com --recv-keys E9977759
  - sudo add-apt-repository -y ppa:beineri/opt-qt-5.10.1-trusty
  - sudo apt-get update -qq
  - sudo apt-get remove sqlite3 libsqlite3-0
