--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: cpp
 compiler: gcc
 
 before_install:
- - sudo add-apt-repository -y ppa:beineri/opt-qt-5.10.1-trusty
+ - sudo add-apt-repository -y ppa:beineri/opt-qt-5.10.1-xenial
  - sudo apt-get update -qq
  - sudo apt-get remove sqlite3 libsqlite3-0
  - sudo apt-get purge sqlite3 libsqlite3-0
