Added libgl1-mesa-dev to fix travis-ci build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get remove sqlite3 libsqlite3-0
  - sudo apt-get purge sqlite3 libsqlite3-0
- - sudo apt-get install -qq mesa-common-dev qt510base qt510imageformats qt510script qt510svg qt510tools
+ - sudo apt-get install -qq mesa-common-dev libgl1-mesa-dev qt510base qt510imageformats qt510script qt510svg qt510tools
  - mkdir deps
  - cd deps
  - wget http://sqlitestudio.pl/files/depends/sqlite-2.8.17.tar.gz
