Syntax fix for GitHub action.

--- a/.github/workflows/3.2.yml
+++ b/.github/workflows/3.2.yml
@@ -34,7 +34,7 @@ jobs:
 
             - name: Download dependencies
               shell: pwsh
-              run (new-object System.Net.WebClient).DownloadFile('https://www.dropbox.com/s/b5t6lb9e7riytq1/win64_deps.zip?dl=1', '.\win64_deps.zip')
+              run: (new-object System.Net.WebClient).DownloadFile('https://www.dropbox.com/s/b5t6lb9e7riytq1/win64_deps.zip?dl=1', '.\win64_deps.zip')
             
             - name: Decompress dependencies
               run: 7z x win64_deps.zip
