Another GitHub Actions iteration.

--- a/.github/workflows/3.2.yml
+++ b/.github/workflows/3.2.yml
@@ -14,7 +14,7 @@ jobs:
               id: cache-qt
               uses: actions/cache@v1
               with:
-                path: ${{ github.workspace }}/Qt/
+                path: ${{ github.workspace }}\Qt
                 key: ${{ runner.os }}-QtCache
                 
             - name: Install Qt
@@ -24,7 +24,7 @@ jobs:
                 version: '5.14.2'
                 host: 'windows'
                 arch: 'win64_mingw73'
-                dir: '${{ github.workspace }}/Qt/'
+                dir: '${{ github.workspace }}'
                 modules: 'qtscript'
 
             - name: Clone repo
