--- a/.github/workflows/3.2.yml
+++ b/.github/workflows/3.2.yml
@@ -37,10 +37,10 @@ jobs:
 
             - name: Download dependencies
               shell: pwsh
-              run: (new-object System.Net.WebClient).DownloadFile('https://www.dropbox.com/s/b5t6lb9e7riytq1/win64_deps.zip?dl=1', '.\win64_deps.zip')
+              run: (new-object System.Net.WebClient).DownloadFile('https://www.dropbox.com/s/b5t6lb9e7riytq1/win64_deps.zip?dl=1', '..\win64_deps.zip')
             
             - name: Decompress dependencies
-              run: 7z x win64_deps.zip
+              run: 7z x -o .. ..\win64_deps.zip
 
             - name: Debug pwd
               run: pwd
@@ -49,8 +49,8 @@ jobs:
               run: tree
               
             - name: QMake
-              run: ${env:Qt5_Dir}\bin\qmake.exe
+              run: qmake.exe --help
               
             - name: Make
-              run: ${env:Qt5_Dir}\..\..\..\Tools\mingw730_64\bin\mingw32-make.exe --help
+              run: ${{ github.workspace }}\Qt\Tools\mingw730_64\bin\mingw32-make.exe --help
               
