--- a/.github/workflows/3.2.yml
+++ b/.github/workflows/3.2.yml
@@ -46,17 +46,17 @@ jobs:
               run: pwd
               
             - name: Debug tree
-              run: tree ..
+              run: tree .. /A
               
             - name: Debug dir
               run: dir ..
               
             - name: Debug qmake
-              run: dir D:\a\sqlitestudio\sqlitestudio\Qt\5.14.2\mingw73_64\bin
+              run: dir D:\a\sqlitestudio\Qt\5.14.2\mingw73_64\bin
               
             - name: QMake
-              run: ${{ github.workspace }}\Qt\5.14.2\mingw73_64\bin\qmake.exe --help
+              run: ${{ github.workspace }}\..\Qt\5.14.2\mingw73_64\bin\qmake.exe --help
               
             - name: Make
-              run: ${{ github.workspace }}\Qt\Tools\mingw730_64\bin\mingw32-make.exe --help
+              run: ${{ github.workspace }}\..\Qt\Tools\mingw730_64\bin\mingw32-make.exe --help
               
