--- a/.github/workflows/3.2.yml
+++ b/.github/workflows/3.2.yml
@@ -35,6 +35,9 @@ jobs:
               shell: bash
               run: curl https://download.qt.io/online/qtsdkrepository/windows_x86/desktop/tools_mingw/qt.tools.win64_mingw730/7.3.0-1x86_64-7.3.0-release-posix-seh-rt_v5-rev0.7z --output ..\mingw.7z
  
+            - name: Debug dir
+              run: dir ..
+              
             - name: Decompress mingw
               if: steps.cache-qt.outputs.cache-hit != 'true'
               run: 7z x -o"${{ github.workspace }}\..\Qt" ..\mingw.7z
