Another GitHub Actions iteration.

--- a/.github/workflows/3.2.yml
+++ b/.github/workflows/3.2.yml
@@ -59,15 +59,15 @@ jobs:
               run: mkdir output output/build output/build/Plugins
             
             - name: Go to build dir
-              shell: bash
-              run: cd output/build
+              run: cd output\build
+            
+            - name: Debug tree
+              run: tree ..\.. /A
             
             - name: QMake SQLiteStudio3
-              shell: bash
-              run: qmake.exe ../../SQLiteStudio3
+              run: qmake.exe ..\..\SQLiteStudio3
             
             - name: Make SQLiteStudio3
-              shell: bash
               run: mingw32-make.exe -j 2
             
             - name: Go to Plugins build dir
@@ -76,7 +76,7 @@ jobs:
             
             - name: QMake Plugins
               shell: bash
-              run: qmake.exe ../../../Plugins
+              run: qmake.exe ..\..\..\Plugins
             
             - name: Make Plugins
               shell: bash
